Closed Bug 1664575 Opened 5 years ago Closed 5 years ago

Crash in [@ mozilla::dom::Navigator::HasCreatedMediaSession]

Categories

(Core :: Audio/Video, defect)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
82 Branch
Tracking Status
firefox-esr68 --- unaffected
firefox-esr78 --- unaffected
firefox80 --- unaffected
firefox81 --- unaffected
firefox82 --- fixed

People

(Reporter: u608768, Assigned: u608768)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/f021d018-1201-4143-84ff-b82f40200910

Top 10 frames of crashing thread:

0 XUL mozilla::dom::Navigator::HasCreatedMediaSession const dom/base/Navigator.cpp:2108
1 XUL mozilla::dom::ContentPlaybackController::GetMediaSession const dom/media/mediacontrol/ContentPlaybackController.cpp:34
2 XUL mozilla::dom::ContentPlaybackController::IsMediaSessionActionSupported const dom/media/mediacontrol/ContentPlaybackController.cpp:73
3 XUL mozilla::dom::ContentPlaybackController::Pause dom/media/mediacontrol/ContentPlaybackController.cpp:110
4 XUL mozilla::dom::ContentMediaControlKeyHandler::HandleMediaControlAction dom/media/mediacontrol/ContentPlaybackController.cpp:174
5 XUL mozilla::dom::ContentChild::RecvUpdateMediaControlAction dom/ipc/ContentChild.cpp:3551
6 XUL mozilla::dom::PContentChild::OnMessageReceived ipc/ipdl/PContentChild.cpp:13169
7 XUL mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2074
8 XUL mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:1953
9 XUL mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:512

Looks like we don't have a inner window, so window->GetNavigator() returns nullptr, and then we try to deref that.

Multiple crashes for a single OS X installation, and one crash on Android.

Assignee: nobody → kmadan
Status: NEW → ASSIGNED
Pushed by kmadan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ab80644987a0 Null check navigator in ContentPlaybackController::GetMediaSession, r=chunmin
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: