Bug 1664575 - Null check navigator in ContentPlaybackController::GetMediaSession, r=chunmin

Differential Revision: https://phabricator.services.mozilla.com/D89974